--- a/styless.css
+++ b/styless.css
@@ -514,7 +514,72 @@ header .search-cart i:hover{
     border-color:#0c4786;
 }
 
+/*Testimonials*/
+.testimonials{
+    position:relative;
+    text-align:center;
+    padding:60px 20px;
+    color:rgb(65, 62, 62);
+    overflow:hidden;
+}
 
+.testimonials::before{
+    content:"";
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:url('img/bgtestimonials.jpg') center/cover no-repeat;
+    filter:blur(5px);
+    z-index:-1;
+}
+
+.testimonials h2{
+    font-size:40px;
+    color:rgb(245, 236, 220);
+    margin-bottom:40px;
+    font-weight:600;
+    text-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+}
+
+.testimonial{
+    margin:20px auto;
+    max-width:750px;
+    background:#e9d7d7;
+    padding:10px 30px;
+    border-radius:12px;
+    box-shadow:0 6px 12px rgba(0,0,0,0.1);
+    position:relative;
+    transition:transform 0.3s ease, box-shadow 0.3s ease;
+    border-left: 8px solid #c53131;
+}
+
+.testimonial:hover{
+    transform:translateY(-5px);
+    box-shadow:0 10px 18px rgba(0,0,0,0.15);
+}
+
+.testimonial p{
+    font-size:18px;
+    color:#555;
+    font-style:italic;
+    line-height:1.6;
+    margin-bottom:0 auto 10px;
+}
+
+.rating{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+.rating span{
+    font-size:20px;
+    color:#dabe22;
+    cursor:pointer;
+    margin:5px 3px;
+}
 
 
 
