--- a/styless.css
+++ b/styless.css
@@ -547,7 +547,10 @@ header .search-cart i:hover{
     margin:20px auto;
     max-width:750px;
     background:#e9d7d7;
-    padding:10px 30px;
+    padding:10px 20
+    
+    
+    px;
     border-radius:12px;
     box-shadow:0 6px 12px rgba(0,0,0,0.1);
     position:relative;
@@ -568,6 +571,11 @@ header .search-cart i:hover{
     margin-bottom:0 auto 10px;
 }
 
+.testimonial span{
+    font-weight:500;
+    font-size:17px;
+    color:#333;
+}
 .rating{
     display:flex;
     justify-content:center;
@@ -578,10 +586,152 @@ header .search-cart i:hover{
     font-size:20px;
     color:#dabe22;
     cursor:pointer;
-    margin:5px 3px;
+    padding:5px 3px;
 }
 
+/*Contact*/
+.contact{
+    padding:80px 30px;
+    text-align: center;
+    background: linear-gradient(to right, #7a4e2f, #131212, #91705d);}
 
+.contact h2{
+    font-size:36px;
+    color:#ffcc99;
+    margin-bottom:20px;
+    font-weight:600;
+}
 
+.contact form{
+    max-width:600px;
+    margin:0 auto;
+    background: rgba(255, 255, 255, 0.17);
+    padding:30px;
+    border-radius:10px;
+    box-shadow:0 4px 12px rgba(255,153,0,0.3);
+}
 
+.contact form input, .contact form textarea{
+    width:100%;
+    padding:12px 15px; 
+    margin-bottom:15px;
+    border:1px solid #ff9800;
+    border-radius:7px;
+    font-size:16px;
+}
+
+.contact form button{
+    background:#d32f2f;
+    color: white;
+    font-size:16px;
+    padding:13px 22px;
+    text-decoration:none;
+    border:none;
+    cursor:pointer;
+    border-radius:10px;
+    font-weight: bold;
+}
+
+.contact form button:hover{
+    background:#ff9800;
+}
+
+/*Footer*/
+footer{
+    background-image: linear-gradient(to right, #7a4e2f, #6f431c, #8a6550);
+    color:#f0e6d2;
+    padding:40px 20px 20px;
+    font-size:16px;
+    border-top:2px solid #ff6f3c;
+    box-shadow:0 -4px 10px rgba(0,0,0,0.1);
+    position:relative;
+    z-index:1;
+}
+
+.footer-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap:25px;
+    max-width:1200px;
+    margin:0 auto;
+}
+
+.footer-section h3 {
+    font-size:18px;
+    color: #ffcc99;
+    margin-bottom:15px;
+    font-weight: bold;
+}
+
+.footer-section p,
+.footer-section ul li a {
+    color:#f0e6d2;
+    line-height: 1.6;
+    text-decoration: none;
+}
+
+.footer-section ul{
+    list-style: none;
+    padding:0;
+}
+
+.footer-section ul li{
+    margin-bottom:8px
+}
+
+.footer-section ul li a:hover{
+    color:#dfa652
+}
+
+.store-btn{
+    margin-top:10px;
+    background-color:#fc4604;
+    color:white;
+    border:none;
+    padding:8px 15px;
+    border-radius:5px;
+    cursor: pointer;
+    font-weight:bold;
+}
+
+.store-btn:hover{
+    background-color: #ff914d;
+}
+
+.social-icons i{
+    font-family:'material-icons';
+    font-style:normal;
+    font-size:20px;
+    color:#ffcc99;
+    margin-right:15px;
+    transition: transform 0.3s ease;
+}
+
+.social-icons i:hover{
+    transform:scale(1.2);
+    color:#da834d ;
+}
+
+.payment-icons i{
+    font-family:'material-icons';
+    font-style:normal;
+    font-size:20px;
+    color:#ffcc99;
+    margin-right:15px;
+    transition: transform 0.3s ease;
+}
+
+.payment-icons i:hover{
+    transform:scale(1.2);
+    color:#da834d;
+}
+
+.footer-bottom{
+    text-align:center;
+    margin-top:30px;
+    border-top:1px solid #ffcc99;
+    padding-top:15px;
+    font-size:14px;
+    color:#ffcc99;
+}
 
